update plugin.xml for 0.8.10

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,7 +17,7 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>0.8.9</version>
+    <version>0.8.10</version>
     <idea-version since-build="80.8000" until-build="95.9999" />
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -37,7 +37,7 @@
             <li>Identifier Hilighter (experimental)</li>
             <li>Go to definition (experimental)</li>
             <li>find usages (experimental)</li>
-            <li>Simple code formatting</li>            
+            <li>Code formatting</li>
             <li>Keyword completion</li>
             <li>2 code inspection(s)</li>
             <li>Hilighing global vs local variables</li>
@@ -59,6 +59,8 @@
         <html>
         <body>
         <dl>
+            <dt>0.8.10</dt>
+            <dd>Many improvements to the code formatter (still considered experimental)n</dd>                 
             <dt>0.8.9</dt>
             <dd>Identifier hilighter, javahelp topic for lua 5.1, Kahlua execution</dd>            
             <dt>0.8.1-0.8.4</dt>
