--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,7 +17,7 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>0.8.18</version>
+    <version>0.8.19</version>
     <idea-version since-build="80.8000" until-build="95.9999" />
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -60,6 +60,8 @@
         <html>
         <body>
         <dl>
+            <dt>0.8.18-19</dt>
+            <dd>Formatter fixes</dd>            
             <dt>0.8.17</dt>
             <dd>Long string literal fix</dd>
             <dt>0.8.16</dt>
@@ -178,6 +180,8 @@
         <!--<action id="trigger.exception" class="com.sylvanaar.idea.errorreporting.TriggerExceptionAction" >-->
             <!--<add-to-group group-id="NewGroup" relative-to-action="NewFile" anchor="after"/>-->
         <!--</action>-->
+
+
     </actions>
 
     <!--<helpset file="IDLuaHelp.jar" path="/Lua.hs" />-->
@@ -238,6 +242,8 @@
         <lang.formatter language="Lua" implementationClass="com.sylvanaar.idea.Lua.lang.formatter.LuaFormattingModelBuilder"/>
         <fileTypeIndentOptionsProvider id="Lua" implementation="com.sylvanaar.idea.Lua.lang.formatter.LuaIndentOptionsProvider"/>
 
+        <typedHandler implementation="com.sylvanaar.idea.Lua.lang.LuaTypedHandlerDelegate" order="after JavaTypedHandler"/>
+  
         <lang.braceMatcher language="Lua"
                            implementationClass="com.sylvanaar.idea.Lua.lang.LuaBraceMatcher"/>
 
