--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -138,7 +138,7 @@
 
 
     <depends>com.intellij.modules.lang</depends>
-    <!--<depends>com.intellij.modules.platform</depends>-->
+    <depends>com.intellij.modules.platform</depends>
 
     <application-components>
         <!-- Add your application components here -->
