--- a/resources/com/sylvanaar/idea/Lua/intentions/LuaIntentionsBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/intentions/LuaIntentionsBundle.properties
@@ -3,8 +3,8 @@
 ############################################################################################################
 #conditional.to.elvis.intention.family.name=Convert Conditional
 #conditional.to.elvis.intention.name=Convert Conditional to Elvis
-#conversion.not.allowed.in.non.lua.files=Refactoring is not allowed for {0}s which have occurrences in non-Lua files: \n
-#convert.cannot.itself=Refactoring is not available for map parameter itself
+#conversion.not.allowed.in.non.lua.files=refactoring is not allowed for {0}s which have occurrences in non-Lua files: \n
+#convert.cannot.itself=refactoring is not available for map parameter itself
 #convert.closure.arg.to.it.intention.family.name=Convert Closure Arg To 'it'
 #convert.closure.arg.to.it.intention.name=Convert closure arg to 'it'
 #convert.closure.to.method.intention.family.name=Convert property to method
