--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>0.8.29</version>
-    <!--##teamcity[buildNumber '0.8.29']-->
+    <version>0.8.30</version>
+    <!--##teamcity[buildNumber '0.8.30']-->
     <idea-version since-build="80.8000" until-build="98.9999" />
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -61,6 +61,8 @@
         <html>
         <body>
         <dl>
+            <dt>0.8.30</dt>
+            <dd>enable 3 new inspections. fix a major bug in the parser that was causing exceptions saying there were unparsed tokens</dd>
             <dt>0.8.25-9</dt>
             <dd>bugfixes</dd>
             <dt>0.8.24</dt>
